# polycrypto

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
src/btc_edge/: __init__.py  config.py  logging_setup.py
src/btc_edge/collectors/: binance.py  polymarket_gamma.py
src/btc_edge/storage/: bronze.py
tests/: test_binance_parse.py  test_bronze.py  test_gamma_parse.py
