[project]
name = "btc-edge"
version = "0.1.0"
description = "Polymarket BTC 5-min markets — measurement & edge detection (Phase 1)"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/btc_edge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
